frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: ns-react-app-master
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30070  # Puedes ajustar este puerto si lo deseas
  type: NodePort
