frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  namespace: ns-react-app-master
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: db91-90-168-208-199.ngrok-free.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80 #
